Fixed modal on small divices

--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,16 @@ a {
         width: 100%;
     }
 
+    .modal-content, .modal-header {
+        padding: 10px;
+        width: 90%;
+    }
+
+    .modal-header {
+        height: 50px;
+        line-height: 30px;
+    }
+
     .about {
         display: block;
     }
